feat: twitter card + mobile opts

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,15 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <meta property="twitter:account_id" content="14407063" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@juristr" />
+    <meta name="twitter:title" content="Juri rocks ;)" />
+    <meta name="twitter:description" content="Check out my blog on juristr.com!" />
+    <meta name="twitter:image:src" content="http://juri.rocks/assets/imgs/twitter-card-bg.png" />
+
+    <link rel="shortcut icon" href="//www.gravatar.com/avatar/64537dfe80f44978663e378d375c7138?s=16&d=favicon&r=PG">
+
     <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css" integrity="sha384-UQiGfs9ICog+LwheBSRCt1o5cbyKIHbwjWscjemyBMT9YCUMZffs6UqUTd0hObXD"
         crossorigin="anonymous">
     <!--<link rel="stylesheet" href="https://unpkg.com/font-awesome@4.7.0/css/font-awesome.min.css">-->
@@ -42,6 +51,16 @@
         img.emoji {
             margin: 0px !important;
             display: inline !important;
+        }
+
+        @media (max-width: 600px) {
+            .container {
+                margin: 100px auto;
+            }
+
+            .profile img {
+                max-width: 80%;
+            }
         }
     </style>
 </head>
