--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,24 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Testapp</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta property="twitter:account_id" content="14407063" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@juristr" />
+  <meta name="twitter:title" content="Juri rocks ;)" />
+  <meta name="twitter:description" content="Check out my blog on juristr.com!" />
+  <meta name="twitter:image:src" content="http://juri.rocks/assets/imgs/twitter-card-bg.png" />
+
+  <link rel="shortcut icon" href="//www.gravatar.com/avatar/64537dfe80f44978663e378d375c7138?s=16&d=favicon&r=PG">
+
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css" integrity="sha384-UQiGfs9ICog+LwheBSRCt1o5cbyKIHbwjWscjemyBMT9YCUMZffs6UqUTd0hObXD"
+        crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
+
 </head>
 <body>
   <app-root>Loading...</app-root>
