--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,13 @@
         crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
-
+  <style>
+    body {
+        font-family: 'Roboto', sans-serif;
+        background-color: #403631;
+        color: white;
+    }
+ </style>
 </head>
 <body>
   <app-root>Loading...</app-root>
